--- a/src/main/resources/templates/NewFile.html
+++ b/src/main/resources/templates/NewFile.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>NAVIEPICS</title>
 </head>
 <body>
-	<h1>TITULO PRUEBA</h1>
+	<h1>NAVIEPICS</h1>
 </body>
 </html>
