--- a/src/main/resources/templates/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Petology</title>
+  <title>Naviepics</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -36,10 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Petology
-            </span>
+            <img src="images/logo.jpg" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,32 +47,18 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">service </a>
+                  <a class="nav-link" href="usuario.html">usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pet.html">Pet's gallery </a>
+                  <a class="nav-link" href="vehiculo.html"> vehiculo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="clinic.html"> clinic</a>
+                  <a class="nav-link" href="estacionamiento.html">  <em>estacionamiento</em></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy.html"> Buy now </a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-            <div class="quote_btn-container  d-flex justify-content-center">
-              <a href="">
-                Call: +01 1234567890
-              </a>
+              </ul>             
             </div>
           </div>
         </nav>
@@ -84,35 +67,39 @@
     <!-- end header section -->
   </div>
 
-  <!-- gallery section -->
-  <section class="gallery-section layout_padding">
+  <!-- about section -->
+
+  <section class="about_section layout_padding">
     <div class="container">
-      <h2>
-        Our Gallery
-      </h2>
-    </div>
-    <div class="container ">
-      <div class="img_box box-1">
-        <img src="images/g-1.png" alt="">
-      </div>
-      <div class="img_box box-2">
-        <img src="images/g-2.png" alt="">
-      </div>
-      <div class="img_box box-3">
-        <img src="images/g-3.png" alt="">
-      </div>
-      <div class="img_box box-4">
-        <img src="images/g-4.png" alt="">
-      </div>
-      <div class="img_box box-5">
-        <img src="images/g-5.png" alt="">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/about.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <h2 class="custom_heading">
+              About Our Pets
+              <span>
+                Clinic
+              </span>
+            </h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since theLorem Ipsum is simply dummy text of the printing and
+              typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+            </p>
+            <div>
+              <a href="">
+                About More
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
-
-
-
-  <!-- end gallery section -->
 
   <!-- info section -->
   <section class="info_section layout_padding2">
@@ -171,6 +158,7 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+
 
 </body>
 
