--- a/src/main/resources/templates/usuario.html
+++ b/src/main/resources/templates/usuario.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Petology</title>
+  <title>Naviepics</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -36,10 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Petology
-            </span>
+            <img src="images/logo.jpg" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,33 +46,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">  
+                  <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">service </a>
+                  <a class="nav-link" href="usuario.html">Usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pet.html">Pet's gallery </a>
+                  <a class="nav-link" href="vehiculo.html">Vehiculo </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="clinic.html"> clinic</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy.html"> Buy now </a>
+                  <a class="nav-link" href="estacionamiento.html">Estacionamiento </a>
                 </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-            <div class="quote_btn-container  d-flex justify-content-center">
-              <a href="">
-                Call: +01 1234567890
-              </a>
+              
             </div>
           </div>
         </nav>
@@ -84,39 +68,76 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container">
+  <!-- service section -->
+  <section class="service_section layout_padding">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/about.png" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <h2 class="custom_heading">
-              About Our Pets
-              <span>
-                Clinic
-              </span>
-            </h2>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since theLorem Ipsum is simply dummy text of the printing and
-              typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-            </p>
-            <div>
-              <a href="">
-                About More
-              </a>
+        <div class="col-md-6 offset-md-2">
+          <h2 class="custom_heading">
+            Our <span>Services</span>
+          </h2>
+          <div class="container layout_padding2">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="img_box">
+                  <img src="images/s-1.png" alt="">
+                </div>
+                <div class="detail_box">
+                  <h6>
+                    Pet Care
+                  </h6>
+                  <p>
+                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exe
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="img_box">
+                  <img src="images/s-2.png" alt="">
+                </div>
+                <div class="detail_box">
+                  <h6>
+                    Pet Hotel
+                  </h6>
+                  <p>
+                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exe
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="img_box">
+                  <img src="images/s-3.png" alt="">
+                </div>
+                <div class="detail_box">
+                  <h6>
+                    Emergency
+                  </h6>
+                  <p>
+                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exe
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
+          <div>
+            <a href="">
+              Read More
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <img src="images/tool.png" alt="" class="w-100">
         </div>
       </div>
     </div>
   </section>
+
+  <!-- end service section -->
+
+
 
   <!-- info section -->
   <section class="info_section layout_padding2">
@@ -175,7 +196,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
 
 </body>
 
