--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="vehiculo.html">Vehiculo </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="estacionamiento.html">Estacionamiento </a>
+                  <a class="nav-link" href="estacionamiento.html">  <em>estacionamiento</em></a>
                 </li>
               </ul>
             </div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/icono_estacionamiento.png" alt="">
                   </div>
                 </div>
               </div>
