--- a/src/main/resources/templates/vehiculo.html
+++ b/src/main/resources/templates/vehiculo.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="vehiculo.html">Vehiculo </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="estacionamiento.html">  <em>estacionamiento</em></a>
+                  <a class="nav-link" href="estacionamiento.html"> estacionamiento</a>
                 </li>
               </ul>
               
