--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,8 +72,6 @@
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -82,22 +80,20 @@
                 <div class="col-md-4 offset-md-2">
                   <div class="slider_detail-box">
                     <h1>
-                      SDIFIRA
+                      Empezar a explorar 
                       <span>
-                        Care Your Pet
+                      NaviEpics
                       </span>
                     </h1>
                     <p >
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry.
-                      Lorem Ipsum has been the industry's standard dummy text ever
+                      Fácil sistema de reserva de parking. Resuelve el caos del estacionamiento con solo unos pocos clics.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
-                        Buy now
+                        Reserva
                       </a>
                       <a href="" class="btn-2">
-                        Contact
+                        Contacta
                       </a>
                     </div>
                   </div>
@@ -116,94 +112,32 @@
                 <div class="col-md-4 offset-md-2">
                   <div class="slider_detail-box">
                     <h1>
-                      Professional
+                      No olvides de hacer tu
                       <span>
-                        Care Your Pet
+                      Reserva
                       </span>
                     </h1>
                     <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry.
-                      Lorem Ipsum has been the industry's standard dummy text ever
+                      Ahora tambien puedes reservar desde la comodidad de tu casa, dale click al boton de RESERVA
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
-                        Buy now
+                        Reserva
                       </a>
                       <a href="" class="btn-2">
-                        Contact
+                        Contacta
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/reservado.png" alt="">
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-4 offset-md-2">
-                  <div class="slider_detail-box">
-                    <h1>
-                      Professional
-                      <span>
-                        Care Your Pet
-                      </span>
-                    </h1>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry.
-                      Lorem Ipsum has been the industry's standard dummy text ever
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Buy now
-                      </a>
-                      <a href="" class="btn-2">
-                        Contact
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-4 offset-md-2">
-                  <div class="slider_detail-box">
-                    <h1>
-                      Professional
-                      <span>
-                        Care Your Pet
-                      </span>
-                    </h1>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry.
-                      Lorem Ipsum has been the industry's standard dummy text ever
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Buy now
-                      </a>
-                      <a href="" class="btn-2">
-                        Contact
-                      </a>
-                    </div>
-                  </div>
-                </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
                     <img src="images/slider-img.png" alt="">
@@ -232,19 +166,21 @@
         <div class="col-md-6">
           <div class="detail-box">
             <h2 class="custom_heading">
-              About Our Pets
+              Acerca de
               <span>
-                Clinic
+                NaviEpics
               </span>
             </h2>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since theLorem Ipsum is simply dummy text of the printing and
-              typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+              Nuestro sistema intuitivo y fácil de usar te permite localizar y 
+              reservar espacios de estacionamiento disponibles en tiempo real. 
+              Ya sea que necesites estacionar en una concurrida área urbana, 
+              cerca de tu oficina, o en un evento especial, nuestro servicio te garantiza 
+              un lugar asegurado sin complicaciones.
             </p>
             <div>
               <a href="">
-                About More
+                Leer Más
               </a>
             </div>
           </div>
@@ -259,7 +195,7 @@
       <div class="row">
         <div class="col-md-6 offset-md-2">
           <h2 class="custom_heading">
-            Our <span>Services</span>
+            Sientete Seguro con <span>NaviEpics</span>
           </h2>
           <div class="container layout_padding2">
             <div class="row">
@@ -269,11 +205,10 @@
                 </div>
                 <div class="detail_box">
                   <h6>
-                    Pet Care
+                    Estacionamiento Confiable
                   </h6>
                   <p>
-                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exe
+                    Con NaviEpics puedes elegir estacionamientos disponibles desde un click, ¡te facilitamos la vida!.
                   </p>
                 </div>
               </div>
@@ -283,11 +218,10 @@
                 </div>
                 <div class="detail_box">
                   <h6>
-                    Pet Hotel
+                    Pago Seguro
                   </h6>
                   <p>
-                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exe
+                    Puedes realizar tu reservacion de forma segura mediante nuestra pagina web.
                   </p>
                 </div>
               </div>
@@ -297,11 +231,10 @@
                 </div>
                 <div class="detail_box">
                   <h6>
-                    Emergency
+                    Tiempo Real
                   </h6>
                   <p>
-                    onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exe
+                    Si en caso de que esten ocupados nuestros estacionamientos, Ahora puedes buscarlos mediante nuestro mapa en tiempo real.
                   </p>
                 </div>
               </div>
@@ -309,7 +242,7 @@
           </div>
           <div>
             <a href="">
-              Read More
+              Leer Más
             </a>
           </div>
         </div>
@@ -328,7 +261,7 @@
   <section class="gallery-section layout_padding">
     <div class="container">
       <h2>
-        Our Gallery
+        Algunas Fotos de Nuestros Estacionamientos
       </h2>
     </div>
     <div class="container ">
@@ -354,34 +287,14 @@
 
   <!-- end gallery section -->
 
-  <!-- buy section -->
-
-  <section class="buy_section layout_padding">
-    <div class="container">
-      <h2>
-        You Can Buy Pet From Our Clinic
-      </h2>
-      <p>
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      </p>
-      <div class="d-flex justify-content-center">
-        <a href="">
-          Buy Now
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- end buy section -->
 
   <!-- client section -->
   <section class="client_section layout_padding-bottom">
     <div class="container">
       <h2 class="custom_heading text-center">
-        What Say Our
+        Que Dicen Nuestros 
         <span>
-          clients
+          Clientes
         </span>
       </h2>
       <p class="text-center">
