--- a/src/main/resources/templates/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento.html
@@ -37,16 +37,16 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" th:href="@{/index.html}">inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" th:href="@{/}">inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/usuario.html}">usuario </a>
+                  <a class="nav-link" th:href="@{/usuario}">usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/vehiculo.html}"> vehiculo</a>
+                  <a class="nav-link" th:href="@{/vehiculo}"> vehiculo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/estacionamiento.html}"> <em>estacionamiento</em></a>
+                  <a class="nav-link" th:href="@{/estacionamientos}"> <em>estacionamiento</em></a>
                 </li>
               </ul>             
             </div>
@@ -162,5 +162,5 @@
   </section>
   <!-- footer section -->
 
-  <script th:src="@{js/estacionamiento.js}"></script></body>
+  <!--<script th:src="@{js/estacionamiento.js}"></script></body>-->
 </html>
