--- a/src/main/resources/templates/vehiculo.html
+++ b/src/main/resources/templates/vehiculo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <!-- Basic -->
@@ -47,19 +47,18 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" th:href="@{/}">Inicio <span class="sr-only">(current)</span></a>
+                </li> 
+                <li class="nav-item">
+                  <a class="nav-link" th:href="@{/usuario}">Usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="usuario.html">Usuario </a>
+                  <a class="nav-link" th:href="@{/vehiculo}">Vehiculo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="vehiculo.html">Vehiculo </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="estacionamiento.html"> estacionamiento</a>
+                  <a class="nav-link" th:href="@{/estacionamientos}"><em>estacionamiento</em></a>
                 </li>
               </ul>
-              
             </div>
             
           </div>
