pagina index lista

--- a/src/main/resources/templates/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento.html
@@ -97,7 +97,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Lugar
+                Ubicacion
               </p>
             </div>
           </div>
@@ -121,7 +121,7 @@
             </div>
             <div class="detail-box">
               <p>
-                navieEpics@gmail.com
+                navieepics@gmail.com
               </p>
             </div>
           </div>
@@ -136,7 +136,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2024 Todos los derechos reservados por
-      <a href="https://html.design/"></a>
+      <a href="images/naviepics.jpeg">NAVIEPICS</a>
     </p>
   </section>
   <!-- footer section -->
