--- a/src/main/resources/templates/usuario.html
+++ b/src/main/resources/templates/usuario.html
@@ -150,7 +150,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Ubicacion
               </p>
             </div>
           </div>
@@ -162,7 +162,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +51 931375082
               </p>
             </div>
           </div>
@@ -174,7 +174,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                naviepics@gmail.com
               </p>
             </div>
           </div>
@@ -189,7 +189,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="images/naviepics.jpeg">NAVIEPICS</a>
     </p>
   </section>
   <!-- footer section -->
