--- a/src/main/resources/templates/vehiculo.html
+++ b/src/main/resources/templates/vehiculo.html
@@ -73,7 +73,7 @@
   <section class="gallery-section layout_padding">
     <div class="container">
       <h2>
-        Our Gallery
+        Nuestros estacionammientos
       </h2>
     </div>
     <div class="container ">
@@ -110,7 +110,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Ubicacion
               </p>
             </div>
           </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +51 931375082
               </p>
             </div>
           </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                naviepics@gmail.com
               </p>
             </div>
           </div>
@@ -149,7 +149,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="images/naviepics.jpeg">NAVIEPICS</a>
     </p>
   </section>
   <!-- footer section -->
