--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-  color: #f5f5f5;
+  color: #021323;
   background-color: #6fbfbc;
   padding: 0;
   margin: 0;
@@ -418,7 +418,7 @@ a:focus {
 }
 
 .client_section .client_container .img_box img {
-  min-width: 100%;
+  min-width: 10%;
 }
 
 .client_section .client_container .detail_box {
