--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/icono_estacionamiento.png" alt="">
+                    <img src="images/carro.png" alt="">
                   </div>
                 </div>
               </div>
@@ -160,7 +160,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about.png" alt="">
+            <img src="images/persona.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -234,7 +234,8 @@
                     Tiempo Real
                   </h6>
                   <p>
-                    Si en caso de que esten ocupados nuestros estacionamientos, Ahora puedes buscarlos mediante nuestro mapa en tiempo real.
+                    Si en caso de que esten ocupados nuestros estacionamientos, 
+                    Ahora puedes buscarlos mediante nuestro mapa en tiempo real.
                   </p>
                 </div>
               </div>
@@ -247,7 +248,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <img src="images/tool.png" alt="" class="w-100">
+          <img src="images/carro1.png" alt="" class="w-100">
         </div>
       </div>
     </div>
@@ -291,6 +292,9 @@
   <!-- client section -->
   <section class="client_section layout_padding-bottom">
     <div class="container">
+      <div class="text-center">
+        <img src="images/usmp.png" alt="Descripción de la imagen" style="max-width: 100%; height: auto;">
+      </div>
       <h2 class="custom_heading text-center">
         Que Dicen Nuestros 
         <span>
@@ -298,33 +302,36 @@
         </span>
       </h2>
       <p class="text-center">
-        orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+       Docente y Estudiantes de la USMP de la carrera de Ingenieria de Computacion y Sistemas del curso de Teoria y Diseño de Base de Datos Filial Sur
+          
       </p>
       <div id="carouselExample2Indicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExample2Indicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExample2Indicators" data-slide-to="1"></li>
           <li data-target="#carouselExample2Indicators" data-slide-to="2"></li>
+          <li data-target="#carouselExample2Indicators" data-slide-to="3"></li>
+          <li data-target="#carouselExample2Indicators" data-slide-to="4"></li>
+          <li data-target="#carouselExample2Indicators" data-slide-to="5"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="layout_padding2 pl-100">
               <div class="client_container ">
                 <div class="img_box">
-                  <img src="images/client.jpg" alt="">
+                  <img src="images/docente.jpg" alt="" width="150" height="150">
                 </div>
                 <div class="detail_box">
                   <h5>
-                    Sandy Mark
+                    Docente: Ruben Garcia Farje
                   </h5>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    Experiencia en proyectos de migración de datos de Oracle a DB2 
+                    y de sistemas legacy a SAP IS-HER. Más de 18 años de liderazgo de equipos 
+                    y dedicado a la docencia de educación superior dentro de asignaturas de base 
+                    de datos y programación. 12 años como DBA Oracle en organización educativa e 
+                    involucramiento en sus procesos de negocio. 3 años de experiencia en entidad 
+                    del Estado en el rubro de préstamos para programas de vivienda.
                   </p>
                 </div>
               </div>
@@ -338,17 +345,18 @@
                 </div>
                 <div class="detail_box">
                   <h5>
-                    Sandy Mark
+                    Estudiante: Juan Matias Gutierrez Casani
                   </h5>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                  </p>
+                    Soy estudiante de la Universidad San Martin de Porres Filial Sur, 
+                    cursando la carrera de Ingeniería de Computación y Sistemas. Actualmente,
+                     estoy en el 5to ciclo del año académico 2024-I, 
+                     y estoy tomando el curso de Teoría y Diseño de Base de Datos. 
+                     Durante mi tiempo en la universidad, he desarrollado una sólida 
+                     comprensión de los fundamentos de la computación y los sistemas, 
+                     y he adquirido habilidades prácticas en diversos lenguajes de programación
+                      y tecnologías de bases de datos.
+                   </p>
                 </div>
               </div>
             </div>
@@ -361,17 +369,90 @@
                 </div>
                 <div class="detail_box">
                   <h5>
-                    Sandy Mark
+                    Estudiante: Andrea Nikole Alva Chavez
                   </h5>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                  </p>
+                    Soy estudiante de la Universidad San Martin de Porres Filial Sur, 
+                    cursando la carrera de Ingeniería de Computación y Sistemas. Actualmente,
+                     estoy en el 5to ciclo del año académico 2024-I, 
+                     y estoy tomando el curso de Teoría y Diseño de Base de Datos. 
+                     Durante mi tiempo en la universidad, he desarrollado una sólida 
+                     comprensión de los fundamentos de la computación y los sistemas, 
+                     y he adquirido habilidades prácticas en diversos lenguajes de programación
+                      y tecnologías de bases de datos.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="layout_padding2 pl-100">
+              <div class="client_container ">
+                <div class="img_box">
+                  <img src="images/client.jpg" alt="">
+                </div>
+                <div class="detail_box">
+                  <h5>
+                    Estudiante: Oscar Rene Pineda Flores
+                  </h5>
+                  <p>
+                    Soy estudiante de la Universidad San Martin de Porres Filial Sur, 
+                    cursando la carrera de Ingeniería de Computación y Sistemas. Actualmente,
+                     estoy en el 5to ciclo del año académico 2024-I, 
+                     y estoy tomando el curso de Teoría y Diseño de Base de Datos. 
+                     Durante mi tiempo en la universidad, he desarrollado una sólida 
+                     comprensión de los fundamentos de la computación y los sistemas, 
+                     y he adquirido habilidades prácticas en diversos lenguajes de programación
+                      y tecnologías de bases de datos.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="layout_padding2 pl-100">
+              <div class="client_container ">
+                <div class="img_box">
+                  <img src="images/client.jpg" alt="">
+                </div>
+                <div class="detail_box">
+                  <h5>
+                    Estudiante: Geraldine Loana Yanque Flores
+                  </h5>
+                  <p>
+                    Soy estudiante de la Universidad San Martin de Porres Filial Sur, 
+                    cursando la carrera de Ingeniería de Computación y Sistemas. Actualmente,
+                     estoy en el 5to ciclo del año académico 2024-I, 
+                     y estoy tomando el curso de Teoría y Diseño de Base de Datos. 
+                     Durante mi tiempo en la universidad, he desarrollado una sólida 
+                     comprensión de los fundamentos de la computación y los sistemas, 
+                     y he adquirido habilidades prácticas en diversos lenguajes de programación
+                      y tecnologías de bases de datos.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="layout_padding2 pl-100">
+              <div class="client_container ">
+                <div class="img_box">
+                  <img src="images/client.jpg" alt="">
+                </div>
+                <div class="detail_box">
+                  <h5>
+                    Estudiante: Rodrigo Andres Barrios Caceres
+                  </h5>
+                  <p>
+                    Soy estudiante de la Universidad San Martin de Porres Filial Sur, 
+                    cursando la carrera de Ingeniería de Computación y Sistemas. Actualmente,
+                     estoy en el 5to ciclo del año académico 2024-I, 
+                     y estoy tomando el curso de Teoría y Diseño de Base de Datos. 
+                     Durante mi tiempo en la universidad, he desarrollado una sólida 
+                     comprensión de los fundamentos de la computación y los sistemas, 
+                     y he adquirido habilidades prácticas en diversos lenguajes de programación
+                      y tecnologías de bases de datos.
+                    </p>
                 </div>
               </div>
             </div>
@@ -398,24 +479,24 @@
           <form action="">
             <div class="text-center">
               <h3>
-                Contact Us
+                Te Contactámos
               </h3>
             </div>
             <div>
-              <input type="text" placeholder="Name" class="pt-3">
+              <input type="text" placeholder="Nombre" class="pt-3">
             </div>
             <div>
-              <input type=" text" placeholder="Pone Number">
+              <input type=" text" placeholder="Numero Celular">
             </div>
             <div>
               <input type="email" placeholder="Email">
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message">
+              <input type="text" class="message-box" placeholder="Mensaje">
             </div>
             <div class="d-flex justify-content-center">
               <button>
-                SEND
+                ENVIAR
               </button>
             </div>
           </form>
@@ -439,7 +520,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Ubicacion
               </p>
             </div>
           </div>
@@ -451,7 +532,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +51 931375082
               </p>
             </div>
           </div>
@@ -463,7 +544,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                naviepics@gmail.com
               </p>
             </div>
           </div>
@@ -477,8 +558,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2024 All Rights Reserved By
+      <a href="images/naviepics.jpeg">NAVIEPICS</a>
     </p>
   </section>
   <!-- footer section -->
@@ -487,22 +568,21 @@
   <script type="text/javascript" src="js/bootstrap.js"></script>
 
   <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
+    // This example adds a marker to indicate the position of Arequipa, Peru.
     function initMap() {
       var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 11,
         center: {
-          lat: 40.645037,
-          lng: -73.880224
+          lat: -16.409047,
+          lng: -71.537451
         },
       });
-
+  
       var image = 'images/maps-and-flags.png';
       var beachMarker = new google.maps.Marker({
         position: {
-          lat: 40.645037,
-          lng: -73.880224
+          lat: -16.409047,
+          lng: -71.537451
         },
         map: map,
         icon: image
@@ -512,7 +592,8 @@
   <!-- google map js -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
   </script>
-  <!-- end google map js -->
+  <!-- end google map js --> 
+  
 </body>
 </body>
 
