--- a/src/main/resources/templates/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento.html
@@ -94,7 +94,7 @@
             <td th:text="${estacionamiento.direccion}"></td>
             <td th:text="${estacionamiento.capacidad}"></td>
             <td th:text="${estacionamiento.horario_funcionamiento}"></td>
-            <td th:text="${estacionamiento.estado} ? 'LIBRE' : 'LLENO'"></td>
+            <td th:text="${estacionamiento.estado} ? 'LIBRE' : 'OCUPADO'"></td>
           </tr>
         </tbody>
 
