--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <!-- Basic -->
@@ -36,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" alt="">
+            <img th:src="@{/images/logo.jpg}" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,20 +47,19 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                </li> 
-                <li class="nav-item">
-                  <a class="nav-link" href="usuario.html">Usuario </a>
+                  <a class="nav-link" th:href="@{/}">inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="vehiculo.html">Vehiculo </a>
+                  <a class="nav-link" th:href="@{/usuario}">usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="estacionamiento.html">  <em>estacionamiento</em></a>
+                  <a class="nav-link" th:href="@{/vehiculo}"> vehiculo</a>
                 </li>
-              </ul>
+                <li class="nav-item">
+                  <a class="nav-link" th:href="@{/estacionamientos}"> <em>estacionamiento</em></a>
+                </li>
+              </ul>             
             </div>
-            
           </div>
         </nav>
       </div>
