--- a/src/main/resources/templates/usuario.html
+++ b/src/main/resources/templates/usuario.html
@@ -60,7 +60,7 @@
   <div class="container-form register">
     <div class="information">
         <div class="info-childs">
-            <h2> ¡Bienvenido!</h2>
+            <h2> ¡Bienvenido a NAVIEPICS!</h2>
             <p>Crea una cuenta y se parte de esta gran comunidad, goza de todas las funcionalidades que tenemos.</p>
             <input type="button" value="Crear cuenta" id="sign-in">
         </div>
