--- a/src/main/resources/templates/css/usuario.css
+++ b/src/main/resources/templates/css/usuario.css
@@ -41,7 +41,7 @@ header nav ul li a {
 }
 
 .logo img {
-    height: 60px; /* Ajustamos el tamaño del logo */
+    height: 60px; 
     margin-right: 20px;
     margin-left: 20px;
 }
